--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
   <div class="card">
     <img src="../img/eu.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title"></h5>
       <p class="card-text"></p>
       <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
     </div>
